--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <br>
 <br> 
 <div class="container-section">
-    <section class="rubrique"> 
+    <section class="basic-section"> 
         <h2> Présentation </h2>
         <p>
             Je suis ravie de vous accueillir sur mon site, où vous pourrez découvrir mon parcours.
@@ -42,8 +42,8 @@
             Résidant à Marseille, je suis à la recherche d’une entreprise pour entamer une alternance à partir de septembre 2025.
         </p>
     </section>
-    <div class="text-style-colummn"> 
-        <section class="rubrique"> 
+    
+        <section class="basic-section"> 
             <h2> Mes motivations  </h2>
             <p> 
                 Je suis très motivée à mettre en pratique les compétences acquises au cours de mes études en informatique. 
@@ -52,13 +52,8 @@
                 contribution aux missions de l’équipe.
             </p>
         </section>
-        <section class="rubrique" id="PDFbutton"> 
-            <h2> Télécharger mon CV en PDF </h2>
-            <h3 class="none" id="white"> Cliquez ici </h3>
     
-        </section>
-    </div>
-    <section class="rubrique"> 
+    <section class="basic-section"> 
         <h2> Pourquoi ce site web ?   </h2>
         <p> 
             Dans un monde de plus en plus digitalisé, 
@@ -71,6 +66,7 @@
     </section>
 </div>
     <label class="contactButton" ><a href="Contact.html"> Me contacter &#9742;</a></label>
+    <label class="PDFButton" ><a href=""> Télécharger PDF<br> </a></label>
     <br>
     <br>
     <br>
