ajout de referencement"
CV
c
"
"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Docu</title>
+    <meta name="description" content="Découvrez le CV de Heather Burbeck, étudiante en informatique à l'IUT Gaston Berger d’Aix-en-Provence, à la recherche d'une alternance en septembre 2025.">
+    <meta name="keywords" content="CV, informatique, développement web, alternance, Aix-en-Provence, GitHub Pages">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Heather Burbeck">
+    <meta property="og:title" content="CV de Heather Burbeck - Étudiante en Informatique">
+    <meta property="og:description" content="Parcours et compétences de Heather Burbeck, étudiante en informatique à la recherche d'une alternance en septembre 2025.">
+    <meta property="og:url" content="https://b24015232.github.io/CVsite/">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <title>CV de Heather Burbeck - Étudiante en Informatique à Aix-en-Provence</title>
     <link rel="stylesheet" href="style-mobile.css">
     <link rel="stylesheet" href="style-desktop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
