--- a/Contact.html
+++ b/Contact.html
@@ -39,7 +39,7 @@
 
   <h1> Contact</h1>
   <br>
-  <section class="coordonneées"> 
+  <section class="basic-section"> 
      <h3> Mes coordonneées </h3>
       <p><strong> Email </strong></p>
       <section class="contact-row"> 
