--- a/Compétences.html
+++ b/Compétences.html
@@ -22,5 +22,19 @@
     </nav>
   </header>
   <h1> Compétences </h1>
+
+
+  <section> 
+    <section> 
+      <p>
+      
+      </p>
+    </section>
+    <section> 
+      <p> 
+  
+      </p>
+    </section>
+  </section>
 </body>
 </html>
