--- a/Compétences.html
+++ b/Compétences.html
@@ -23,18 +23,18 @@
   </header>
   <h1> Compétences </h1>
 
-
-  <section> 
-    <section> 
-      <p>
-      
-      </p>
-    </section>
-    <section> 
-      <p> 
-  
-      </p>
-    </section>
+<div class="competence-container"> 
+  <section class="competences"> 
+    <button> HTML </button>
+    <button>  CSS </button>
+    <button> C++ </button>
+    <button> Java </button>
+    <button> SQL </button>
+    <button> PYTHON </button>
   </section>
+
+
+</div>
+  
 </body>
 </html>
