--- a/Contact.html
+++ b/Contact.html
@@ -56,12 +56,12 @@
 
         <section class="contact-row"> 
           <p class="textToCopy">burbeck.heather@gmail.com</p>
-          <button onclick="copyText(this)">⎘</button>
+          <button class ="CCbutton" onclick="copyText(this)">⎘</button>
         </section>
         
         <section class="contact-row"> 
           <p class="textToCopy">06 13 85 62 89</p>
-          <button onclick="copyText(this)">⎘</button> <!-- Icône Document Copié -->
+          <button class ="CCbutton" onclick="copyText(this)">⎘</button> <!-- Icône Document Copié -->
         </section>
 
     </section>
