--- a/Compétences.html
+++ b/Compétences.html
@@ -13,12 +13,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=League+Spartan:wght@100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rozha+One&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Docu</title>
-    <link rel="stylesheet" href="style-mobile.css">
-    <link rel="stylesheet" href="style-desktop.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=League+Spartan:wght@100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rozha+One&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Docu</title>
+  <link rel="stylesheet" href="style-mobile.css">
+  <link rel="stylesheet" href="style-desktop.css">
 </head>
 <body>
   <header class="menu">
@@ -49,25 +49,92 @@
 
 
 
+
 <div class="content-section">
+
     <section id="section1" class="section-comp">
       <h3> HTML </h3>
+      <section class="jauge">  
+        <section class="premier-cube"></section> 
+        <section class="cube-jauge"></section>  
+        <section class="cube-jauge"></section> 
+        <section class="cube-jauge"></section>   
+        <section class="cube-jauge"></section>  
+        <section class="cube-jauge"> </section> 
+        <section class="cube-jauge"> </section> 
+      </section>
+      <div class="project"> 
+        <section class="projectDone"> 
+            <h4> PROJETS EFFECTUÉS</h4>
+        </section>
+        <section class="projectDone"> 
+          <h4> FUTURES PROJETS</h4>
+        </div>
     </section>
+ 
+
     <section id="section2" class="section-comp">
       <h3> CSS </h3>
+      <section class="jauge">  
+        <section class="premier-cube"></section> 
+        <section class="cube-jauge"></section>  
+        <section class="cube-jauge"></section> 
+        <section class="cube-jauge"></section>   
+        <section class="cube-jauge"></section>  
+        <section class="cube-jauge"> </section> 
+        <section class="cube-jauge"> </section> 
+      </section>
     </section>
+
     <section id="section3" class="section-comp">
       <h3> C++ </h3>
+      <section class="jauge">  
+        <section class="premier-cube"></section> 
+        <section class="cube-jauge"></section>  
+        <section class="cube-jauge"></section> 
+        <section class="cube-jauge"></section>   
+        <section class="cube-jauge"></section>  
+        <section class="cube-jauge"> </section> 
+        <section class="cube-jauge"> </section> 
+      </section>
     </section>
+
     <section id="section4" class="section-comp">
       <h3> Java </h3>
+      <section class="jauge">  
+        <section class="premier-cube"></section> 
+        <section class="cube-jauge"></section>  
+        <section class="cube-jauge"></section> 
+        <section class="cube-jauge"></section>   
+      </section>
     </section>
+
     <section id="section5" class="section-comp" >
       <h3> SQL </h3>
+      <section class="jauge">  
+        <section class="premier-cube"></section> 
+        <section class="cube-jauge"></section>  
+        <section class="cube-jauge"></section> 
+        <section class="cube-jauge"></section>   
+        <section class="cube-jauge"></section>  
+        <section class="cube-jauge"></section> 
+      </section>
     </section>
+
     <section id="section6" class="section-comp" >
       <h3> PYTHON </h3>
+      <section class="jauge">  
+        <section class="premier-cube"></section> 
+        <section class="cube-jauge"></section>  
+        <section class="cube-jauge"></section> 
+        <section class="cube-jauge"></section>   
+      </section>
+  
+
     </section>
+      </section>
+     
+
 </div>
 <script>
     window.addEventListener('scroll', function() {
