--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
             J’ai décidé de me démarquer en créant un CV interactif sous forme de site web, afin de présenter mon parcours de manière dynamique, moderne et immersive. 
             Ce site vous offre une navigation fluide avec plusieurs sections clés 
         </p>
-        <label class="PDFButton" ><a href=""> Télécharger PDF<br> </a></label>
+        <button class="PDFButton" >Télécharger PDF</a></button>
     </section>
 </div>
-    <label class="contactButton" ><a href="Contact.html"> Me contacter &#9742;</a></label>
+    <a href="Contact.html" ><button class="contactButton"> Me contacter &#9742;</button> </a>
     <br>
     <br>
     <br>
