--- a/Contact.html
+++ b/Contact.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=League+Spartan:wght@100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Rozha+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=League+Spartan:wght@100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rozha+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <script>
@@ -49,8 +51,12 @@
     <section class="basic-section">
       <h2> Comment me contacter ?</h2>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, voluptates?</p>
+        <section class="contentConcButton"> 
+          <a href="mailto:burbeckheather@gmail.com"> <button class="contactButtons"> Envoyer un mail </button> </a>
+          <a href="tel:0613856289"><button class="contactButtons"> Appeler directement</button></a>
+        </section>
+        
     </section>
-
     <section class="basic-section"> 
       <h2> Mes coordonneées </h2>
 
