--- a/Compétences.html
+++ b/Compétences.html
@@ -54,6 +54,52 @@
 
     <section id="section1" class="section-comp">
       <h3> Langues </h3>
+    </section>
+      <section class="section-flag">
+        <section class="flag">
+            <img src="image/france-2.webp">
+          <section class="jauge"> 
+              <section class="premier-cube"></section> 
+              <section class="cube-jauge"></section>  
+              <section class="cube-jauge"></section> 
+              <section class="cube-jauge"></section>   
+              <section class="cube-jauge"></section>  
+              <section class="cube-jauge"> </section> 
+              <section class="cube-jauge"> </section> 
+              <section class="cube-jauge"> </section> 
+              <section class="cube-jauge"> </section> 
+              <section class="dernier-cube"> </section> 
+          </section>
+            <p> Courant </p>
+       </section>
+          <br>
+          <br>
+        <section class="flag">
+          <img src="image/royaume-uni-2.webp"> 
+          <section class="jauge"> 
+            <section class="premier-cube"></section> 
+            <section class="cube-jauge"></section>  
+            <section class="cube-jauge"></section> 
+            <section class="cube-jauge"></section>   
+            <section class="cube-jauge"></section>  
+            <section class="cube-jauge"> </section> 
+            <section class="cube-jauge"> </section> 
+          </section>
+          <p> Niveau intermediaire </p>
+        </section>
+          <br>
+          <br>
+        <section class="flag">
+          <img src="image/le-portugal-2.webp">
+          <section class="jauge"> 
+            <section class="premier-cube"></section> 
+            <section class="cube-jauge"></section>  
+            <section class="cube-jauge"></section> 
+            <section class="cube-jauge"></section>   
+          </section>
+          <p> Niveau scolaire </p>
+        </section>
+  </section>
   
     </section>
  
@@ -69,8 +115,9 @@
         <section class="cube-jauge"></section>  
         <section class="cube-jauge"> </section> 
         <section class="cube-jauge"> </section> 
+        <section class="cube-jauge"> </section> 
       </section>
-      <p> 10% </p>
+      <p> 80% </p>
       
     </section>
     <div class="project"> 
@@ -184,7 +231,12 @@
 
 
 
-
+<br>
+<footer> 
   
+  <a href="https://www.flaticon.com/fr/icones-gratuites/royaume-uni" title="royaume-uni icônes">Royaume-uni icônes créées par Freepik - Flaticon</a><br>
+  <a href="https://www.flaticon.com/fr/icones-gratuites/france" title="france icônes">France icônes créées par Freepik - Flaticon</a><br>
+  <a href="https://www.flaticon.com/fr/icones-gratuites/le-portugal" title="le portugal icônes">Le portugal icônes créées par Freepik - Flaticon</a>
+</footer>
 </body>
 </html>
