--- a/Contact.html
+++ b/Contact.html
@@ -61,7 +61,7 @@
       <h2> Mes coordonneées </h2>
 
         <section class="contact-row"> 
-          <p class="textToCopy">burbeck.heather@gmail.com</p>
+          <p class="textToCopy">burbeckheather@gmail.com</p>
           <button class ="CCbutton" onclick="copyText(this)">⎘</button>
         </section>
         
