--- a/Compétences.html
+++ b/Compétences.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>CV de Heather Burbeck - Étudiante en Informatique à Aix-en-Provence</title>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Découvrez le CV de Heather Burbeck, étudiante en informatique à l'IUT Gaston Berger d’Aix-en-Provence, à la recherche d'une alternance en septembre 2025.">
+    <meta name="keywords" content="CV, informatique, développement web, alternance, Aix-en-Provence, GitHub Pages">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Heather Burbeck">
+    <meta property="og:title" content="CV de Heather Burbeck - Étudiante en Informatique">
+    <meta property="og:description" content="Parcours et compétences de Heather Burbeck, étudiante en informatique à la recherche d'une alternance en septembre 2025.">
+    <meta property="og:url" content="https://b24015232.github.io/CVsite/">
+    <meta name="twitter:card" content="summary_large_image">
+  <title>Compétences de Heather Burbeck - Étudiante en Informatique à Aix-en-Provence</title>
   <link rel="stylesheet" href="style-mobile.css">
   <link rel="stylesheet" href="style-desktop.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,7 +67,7 @@
     </section>
       <section class="section-flag">
         <section class="flag">
-            <img src="image/france-2.webp">
+            <img src="image/france-2.webp" alt="drapeau de la France">
           <section class="jauge"> 
               <section class="premier-cube"></section> 
               <section class="cube-jauge"></section>  
@@ -75,7 +85,7 @@
           <br>
           <br>
         <section class="flag">
-          <img src="image/royaume-uni-2.webp"> 
+          <img src="image/royaume-uni-2.webp" alt="drapeau du Royaume-uni"> 
           <section class="jauge"> 
             <section class="premier-cube"></section> 
             <section class="cube-jauge"></section>  
@@ -90,7 +100,7 @@
           <br>
           <br>
         <section class="flag">
-          <img src="image/le-portugal-2.webp">
+          <img src="image/le-portugal-2.webp" alt="drapeau du Portugal">
           <section class="jauge"> 
             <section class="premier-cube"></section> 
             <section class="cube-jauge"></section>  
@@ -233,10 +243,10 @@
 
 <br>
 <footer> 
-  
-  <a href="https://www.flaticon.com/fr/icones-gratuites/royaume-uni" title="royaume-uni icônes">Royaume-uni icônes créées par Freepik - Flaticon</a><br>
-  <a href="https://www.flaticon.com/fr/icones-gratuites/france" title="france icônes">France icônes créées par Freepik - Flaticon</a><br>
-  <a href="https://www.flaticon.com/fr/icones-gratuites/le-portugal" title="le portugal icônes">Le portugal icônes créées par Freepik - Flaticon</a>
+  <h3> Crédits </h3>
+      <a href="https://www.flaticon.com/fr/icones-gratuites/royaume-uni" title="royaume-uni icônes">Royaume-uni icônes créées par Freepik - Flaticon</a><br>
+      <a href="https://www.flaticon.com/fr/icones-gratuites/france" title="france icônes">France icônes créées par Freepik - Flaticon</a><br>
+      <a href="https://www.flaticon.com/fr/icones-gratuites/le-portugal" title="le portugal icônes">Le portugal icônes créées par Freepik - Flaticon</a>
 </footer>
 </body>
 </html>
