--- a/Compétences.html
+++ b/Compétences.html
@@ -55,6 +55,7 @@
     <button class="compButton" onclick="scrollToSection('section4')"> Java </button>
     <button class="compButton" onclick="scrollToSection('section5')"> SQL </button>
     <button class="compButton" onclick="scrollToSection('section6')"> PYTHON </button>
+    <button class="compButton" onclick="scrollToSection('section7')"> Outils de travail</button>
 </section>
 
 
@@ -218,6 +219,41 @@
         <h4> FUTURES PROJETS</h4>
     </div>
       </section>
+
+      <section id="section7" class="section-comp" >
+        <h3> Outils de travail </h3>
+
+        <div class="tools"> 
+          <section class="tools-section"> 
+              <h4> ENVIRONEMENT DE DÉVELOPPEMENT</h4>
+              <ul>
+                <li> Visual Studio Code </li>
+                <li> QT Creator</li>
+                <li> ECLIPSE IDE</li>
+                <li> IntelliJ IDEA</li>
+                <li> Spyder</li>
+                <li> Oracle SQL Developper</li>
+              </ul>
+          </section>
+          <section class="tools-section"> 
+            <h4> SYSTÈMES D'EXPLOITATIONS</h4>
+            <ul>
+              <li> MACOS </li>
+              <li> Linux Ubuntu</li>
+              <li> Windows</li>
+            </ul>
+          </section>
+          <section class="tools-section">
+            <h4> OUTILS DE VERSIONNAGE</h4>
+            <ul>
+              <li> Git / GitHub</li>
+            </ul>
+          </section>
+           
+        </div>
+
+      </section>
+  
      
 
 </div>
